Bug 121448 - Focus incorrectly moves to document on escape key input in undocked sidebar fill type and fill attribute boxes
Summary: Focus incorrectly moves to document on escape key input in undocked sidebar f...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-15 18:58 UTC by Jim Raykowski
Modified: 2018-12-13 16:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-11-15 18:58:44 UTC
When sidebar is undocked and escape is pressed while in a Fill control, not in drop down mode, focus moves to document. This goes against guideline 5 in Guidelines for keyboard navigation in sidebar [1].

Steps to repro: 

1) open draw
2) open the sidebar
3) undock the sidebar 
4) insert any shape into document and select it
5) click on Area panel Fill control in the sidebar
6) select any fill
focus is now in Fill control
7) press Escape key

Results: Focus moves to document

Expected Results: Focus moves to Area panel title


[1] https://design.blog.documentfoundation.org/2017/02/16/guidelines-for-keyboard-navigation-in-the-sidebar/
Comment 1 Jim Raykowski 2018-12-02 01:36:25 UTC
patch for is here:
https://gerrit.libreoffice.org/#/c/64419/
Comment 2 Commit Notification 2018-12-07 07:28:34 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/74e1281955782ca5c8a2dfb6d668a53e097b9be1%5E%21

tdf#121448 Check if fill box event notify is already handled

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.