tdf#121448 Check if fill box event notify is already handled

Change-Id: I8b2e1e7a7bf711e78feb3c0532d597f1e9f14c03